# omnicore-ai

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py  dependencies.py  errors.py  exception_handlers.py  jwt.py  logging.py  middleware.py
backend/app/db/: base.py  enums.py  mixins.py  models.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/integrations/ai/: __init__.py  chroma_client.py  document_indexing_service.py  forecasting_service.py  phi3_service.py  rag_service.py
backend/app/modules/admin/: __init__.py  permissions.py  router.py  schemas.py  service.py
backend/app/modules/analytics/: repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/modules/copilot/: __init__.py  models.py  permissions.py  ports.py  router.py  (+3 more)
backend/app/repositories/: __init__.py  base.py
backend/app/schemas/: __init__.py  common.py  pagination.py
backend/app/services/: __init__.py  base.py
backend/omnicore_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: check_models.py  init-db.sh  seed-db.sh  start-backend.sh
backend/tests/unit/: test_auth_service.py  test_copilot_service.py  test_forecasting_integration_service.py  test_inventory_service.py  test_order_service.py  test_product_service.py
(+97 files in other folders)
