[project]
name = "omnicore-ai-backend"
version = "0.1.0"
description = "FastAPI backend for the OmniCore AI modular monolith MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "chromadb>=0.5.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pyjwt>=2.10.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
